# noted

./: .gitignore  README.md  pyproject.toml  todo.py
lib/: config.py
noted/: __init__.py  noted.py
noted/lib/: config.py  save.py  setup.py
